# zwave_soc_keypad

./: .gitignore  README.md  ZWave_SoC_Keypad_Solution.code-workspace  ZWave_SoC_Keypad_Solution.slcw  ZWave_SoC_Keypad_Solution.slpb  vscsolution.conf  zwave_soc_keypad.code-workspace
ZWave_SoC_Keypad_Solution_cmake/: CMakeLists.txt  CMakePresets.json
bootloader-storage-internal-single-zwave-ota/: .projectlinkstore  bootloader-storage-internal-single-zwave-ota.slcp  bootloader-storage-internal-single-zwave-ota.slpb  bootloader-storage-internal-single-zwave-ota.slps  vscode.conf
bootloader-storage-internal-single-zwave-ota/autogen/: btl_internal_storage_slot_cfg_default.h  linkerfile.ld
bootloader-storage-internal-single-zwave-ota/autogen/.slc_state/: .crc_config.crc
bootloader-storage-internal-single-zwave-ota/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
bootloader-storage-internal-single-zwave-ota/cmake_gcc/: CMakeLists.txt  CMakePresets.json  bootloader-storage-internal-single-zwave-ota.cmake  toolchain.cmake
bootloader-storage-internal-single-zwave-ota/config/: btl_core_cfg.h  btl_storage_cfg.h  btl_storage_cfg_default.h  btl_storage_slot_cfg.h  btl_storage_slot_cfg_default.h  pin_config.h
zwave_soc_keypad/: .projectlinkstore  README.md.old  app.c  app_btn_handler.c  app_cc_door_lock_callbacks.c  app_cc_event_handlers.c  app_cli.c  app_credentials.h  app_keypad.c  app_keypad.h  events.h  vscode.conf  zwave_soc_keypad.code-workspace  zwave_soc_keypad.pintool  zwave_soc_keypad.slcp  zwave_soc_keypad.slpb  zwave_soc_keypad.slps
zwave_soc_keypad/autogen/: cc_door_lock_config.h  linkerfile.ld  sl_cli_command_table.c  sl_cli_command_table.html  sl_cli_instances.c  sl_component_catalog.h  sl_event_handler.c  sl_event_handler.h  sl_iostream_init_eusart_instances.c  sli_mbedtls_config_autogen.h  sli_psa_config_autogen.h
zwave_soc_keypad/autogen/.slc_state/: .crc_config.crc
zwave_soc_keypad/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
zwave_soc_keypad/cmake_gcc/: CMakeLists.txt  CMakePresets.json  zwave_soc_keypad.cmake
zwave_soc_keypad/config/: FreeRTOSConfig.h  app_button_press_config.h  cc_user_code_config.h  keyscan_driver_config.h  pin_config.h  psa_crypto_config.h  sl_board_control_config.h  sl_cli_config_inst0.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_debug_swo_config.h  sl_iostream_eusart_vcom_config.h  sl_rail_util_pa_tables_config.h  sl_simple_led_led1_config.h  sl_storage_config.h  zaf_appname_config.h  zaf_config.h  zaf_event_distributor_core_config.h  zw_config_rf.h  zw_hardware_config.h  zw_log_config.h  zw_region_config.h  zw_version_config.h
zwave_soc_keypad/config/cc_config/: DoorLockKeyPad.cc_config  slc_args.json
(+4 files in other folders)
